--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <p>Sea ice is literally frozen sea water. Monitoring how the extent changes over time can provide indications of how climate change is effecting the polar regions.<br>Use the interactive charts below to how the extent varies from 1978-2021.</p>
     
-  <iframe src="https://climate.nasa.gov/interactives/global-ice-viewer/#/3/7" width="1200" height="800"></iframe>
+  <iframe src="https://livingatlas.arcgis.com/sea-ice/" width="1200" height="800"></iframe>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
   
 </body>
