--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <div class="jumbotron">
-          <h1>Sea Ice extent!</h1>
+          <h1>Polar Sea Ice - 1978-2021 and Beyond</h1>
           
        
       </div>
