--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="static/css/style.css">
+</head>
+<body>   
+  <!-- <Dropdown menu> -->  
     <div class="dropdown">
       <button class="dropbtn">Home</button>
       <div class="dropdown-menu dropdown-menu-right">
@@ -21,8 +24,8 @@
       </div>
     </div>
       
-</head>
-<body>
+<!-- <select id="selDataset"></select> -->
+
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
