--- a/index2.html
+++ b/index2.html
@@ -26,13 +26,15 @@
     <div class="row">
       <div class="jumbotron text-center">
           <h1>Polar Sea Ice - 1978-2021 and Beyond </h1>
-          <p>Sea ice is literally frozen sea water. Monitoring how the extent changes over time can provide indications of how climate change is effecting the polar regions.</p>
+          
         </div>
     </div>
     </div>
 </head>
   <!-- Add a button to activate scraping script -->
   <div class="container">
+    <p>  Sea ice is literally frozen sea water. Monitoring how the extent changes over time can provide indications of how climate change is effecting the polar regions.</p>
+    <p>  Based on past features of science exploration and calculation on melting and atmosphere changes,  looking at selected trends to show the sea-ice diminishing from 2003-2020 to try and predict at what point in time in the future these factors would impact the melting of the arctic sea ice extent.</p>
     <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
   </div>
 <!-- Add section for Mars News -->
@@ -52,6 +54,7 @@
 <div class="row" id="mars-featured-image">
   <div class="col-md-8">
     <h2>Featured Mars Image</h2>
+      
 
     <!-- if images is False/None/non-existent, then default to error message -->
     <img
@@ -60,7 +63,7 @@
       alt="Responsive image"
     />
   </div>
-
+  
   <div class="col-md-4">
     <!-- Mars Facts -->
     <div class="row" id="mars-facts">
