--- a/Websites/web/index.html
+++ b/Websites/web/index.html
@@ -56,7 +56,7 @@
                     <div class="col-md-4">                        
                             <a href="{{ data['daily_pic'][0] }}">
                                 <img src="{{ data['daily_pic'][0] | default('static/images/error.png', true) }}" 
-                            style="max-width: 400px;" 
+                            style="max-width: 350px;" 
                             class="img-responsive"
                             alt="Responsive image"
                             /></a>                         
@@ -65,7 +65,7 @@
                     <div class="col-md-4">
                         <a href="{{ data['daily_pic'][1] }}">
                         <img src="{{ data['daily_pic'][1] | default('static/images/error.png', true) }}" 
-                            style="max-width: 400px;" 
+                            style="max-width: 350px;" 
                             class="img-responsive"
                             alt="Responsive image"
                             /></a>
@@ -74,7 +74,7 @@
                     <div class="col-md-4">
                         <a href="{{ data['daily_pic'][2] }}">
                         <img src="{{ data['daily_pic'][2] | default('static/images/error.png', true) }}" 
-                            style="max-width: 400px;" 
+                            style="max-width: 350px;" 
                             class="img-responsive"
                             alt="Responsive image"
                             /></a>
@@ -91,8 +91,8 @@
                         <h2 class="section-heading text-uppercase">Sea Ice Aware - Living Atlas</h2>
                         <h3 class="section-subheading text-muted">By ArcGIS Living Atlas of the World team</h3>
                     </div>
-                    <div class="col-md-12">
-                        <iframe src="https://livingatlas.arcgis.com/sea-ice/" width="1200" height="800"></iframe>
+                    <div class="col-md-12 iframecontainer">
+                        <iframe class="responsive-iframe" src="https://livingatlas.arcgis.com/sea-ice/" width="1200" height="800"></iframe>
                         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
                     </div>
                 </div>
