--- a/Websites/web/index.html
+++ b/Websites/web/index.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <!-- Aware-->
-        <section class="page-section" id="aware">
+        <section class="page-section bg-light" id="aware">
             <div class="container">        
                 <div class="text-center">
                     <div class="col-md-12">
@@ -183,8 +183,8 @@
                                 <img class="img-fluid" src="static/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Data ETL</div>
-                                <div class="portfolio-caption-subheading text-muted">Python Pandas Xarray</div>
+                                <div class="portfolio-caption-heading">Data Exploration/Gathering</div>
+                                <div class="portfolio-caption-subheading text-muted">Python Pandas</div>
                             </div>
                         </div>
                     </div>
@@ -195,11 +195,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="static/img/portfolio/2.jpg" alt="..." />
+                                <img class="img-fluid" src="static/img/portfolio/2.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Data ETL</div>
+                                <div class="portfolio-caption-subheading text-muted">Python Pandas Xarray</div>
                             </div>
                         </div>
                     </div>
@@ -210,11 +210,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="static/img/portfolio/3.jpg" alt="..." />
+                                <img class="img-fluid" src="static/img/portfolio/3.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Regression Analysis</div>
+                                <div class="portfolio-caption-subheading text-muted">R Pandas</div>
                             </div>
                         </div>
                     </div>
@@ -225,11 +225,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="static/img/portfolio/4.jpg" alt="..." />
+                                <img class="img-fluid" src="static/img/portfolio/4.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Machine Learning - Model Training</div>
+                                <div class="portfolio-caption-subheading text-muted">Pandas ARIMAX-model</div>
                             </div>
                         </div>
                     </div>
@@ -240,11 +240,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="static/img/portfolio/5.jpg" alt="..." />
+                                <img class="img-fluid" src="static/img/portfolio/5.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">Machine Learning - Data Forecasting</div>
+                                <div class="portfolio-caption-subheading text-muted">Pandas</div>
                             </div>
                         </div>
                     </div>
@@ -255,11 +255,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="static/img/portfolio/6.jpg" alt="..." />
+                                <img class="img-fluid" src="static/img/portfolio/6.PNG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">Website Developing</div>
+                                <div class="portfolio-caption-subheading text-muted">HTML Flask MongoDB GoogleAppEngine</div>
                             </div>
                         </div>
                     </div>
@@ -432,10 +432,12 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Data ETL</h2>
+                                    <h2 class="text-uppercase">Data Exploration/Gathering</h2>
                                     <p class="item-intro text-muted">Python Pandas Xarray</p>
                                     <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>1. National Snow and Ice Data Center. NSIDC data on Google Earth. Accessed March 1, 2019
+                                       2. Climate Data Store
+                                       3. Visualize Arctic and Antarctic Sea</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
@@ -467,9 +469,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/2.jpg" alt="..." />
+                                    <h2 class="text-uppercase">Data ETL</h2>
+                                    <p class="item-intro text-muted">Python Pandas Xarray</p>
+                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/2.PNG" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
@@ -502,9 +504,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/3.jpg" alt="..." />
+                                    <h2 class="text-uppercase">Regression Analysis</h2>
+                                    <p class="item-intro text-muted">R Pandas</p>
+                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/3.png" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
@@ -537,9 +539,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/4.jpg" alt="..." />
+                                    <h2 class="text-uppercase">Machine Learning - Model Training</h2>
+                                    <p class="item-intro text-muted">Pandas ARIMAX-model</p>
+                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/4.PNG" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
@@ -572,9 +574,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/5.jpg" alt="..." />
+                                    <h2 class="text-uppercase">Machine Learning - Data Forecasting</h2>
+                                    <p class="item-intro text-muted">Pandas</p>
+                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/5.PNG" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
@@ -607,9 +609,9 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/6.jpg" alt="..." />
+                                    <h2 class="text-uppercase">Website Developing</h2>
+                                    <p class="item-intro text-muted">HTML Flask MongoDB GoogleAppEngine</p>
+                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/6.PNG" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
