--- a/Websites/web/index.html
+++ b/Websites/web/index.html
@@ -435,9 +435,20 @@
                                     <h2 class="text-uppercase">Data Exploration/Gathering</h2>
                                     <p class="item-intro text-muted">Python Pandas Xarray</p>
                                     <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
-                                    <p>1. National Snow and Ice Data Center. NSIDC data on Google Earth. Accessed March 1, 2019
-                                       2. Climate Data Store
-                                       3. Visualize Arctic and Antarctic Sea</p>
+                                    <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
+                                    <p>Based on research, we discovered the following trends in the sea ice extent size between 1980 and 2021</p>
+                                    <p>In order to identify which factors contribute to this trend,  we reviewed data from the following resources and identified the most useful features to be used in our analysis:
+
+                                        •	National Snow and Ice Data Center (NSIDC) (https://nsidc.org/data/google_earth)
+                                        •	Climate Data Store (https://cds.climate.copernicus.eu/user/119111)
+                                        •	Visualize Arctic and Antarctic Sea Ice (https://livingatlas.arcgis.com/sea-ice/)
+                                        </p>
+                                        <p>We extracted the following information:
+                                            <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
+                                        </p>
+                                        <p>The trends of these features were assessed:
+                                            <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
+                                        </p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
