--- a/Websites/web/index.html
+++ b/Websites/web/index.html
@@ -183,7 +183,7 @@
                                 <img class="img-fluid" src="static/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Data Exploration/Gathering</div>
+                                <div class="portfolio-caption-heading">Data Exploration and Gathering</div>
                                 <div class="portfolio-caption-subheading text-muted">Python Pandas</div>
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Data Exploration/Gathering</h2>
+                                    <h2 class="text-uppercase">Data Exploration and Gathering</h2>
                                     <p class="item-intro text-muted">Python Pandas Xarray</p>
                                     <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
                                     <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
@@ -451,7 +451,7 @@
                                         </p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Tools and Libraries used:</strong>
                                             Threads
                                         </li>
                                         <li>
@@ -486,7 +486,7 @@
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Tools and Libraries used:</strong>
                                             Explore
                                         </li>
                                         <li>
@@ -521,7 +521,7 @@
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Tools and Libraries used:</strong>
                                             Finish
                                         </li>
                                         <li>
@@ -556,7 +556,7 @@
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Tools and Libraries used:</strong>
                                             Lines
                                         </li>
                                         <li>
@@ -591,7 +591,7 @@
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Tools and Libraries used:</strong>
                                             Southwest
                                         </li>
                                         <li>
@@ -626,7 +626,7 @@
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
+                                            <strong>Tools and Libraries used:</strong>
                                             Window
                                         </li>
                                         <li>
