--- a/Websites/web/index.html
+++ b/Websites/web/index.html
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Daily Image Update</h2>
-                    <h3 class="section-subheading text-muted">Read scientific analysis on Arctic sea ice conditions. We provide an update during the first week of each month, or more frequently as conditions warrant.</h3>
+                    <h3 class="section-subheading text-muted">Here you will receive daily Artic Sea ice Extent, and Sea Ice Concentration monitoring over the Artic Sea Ice Extent in millions of square kilometers as a data visualization of Arctic polar sea ice</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">                        
@@ -89,7 +89,9 @@
                 <div class="text-center">
                     <div class="col-md-12">
                         <h2 class="section-heading text-uppercase">Sea Ice Aware - Living Atlas</h2>
-                        <h3 class="section-subheading text-muted">By ArcGIS Living Atlas of the World team</h3>
+                        <h3 class="section-subheading text-muted">By ArcGis Living Atlas of the World team.<br/> 
+                            This is an interactive tool that plays the event of melting in both Arctic Sea Ice and Antarctic Sea Ice over a period of time during a timelapse event to display melting.
+                            </h3>
                     </div>
                     <div class="col-md-12 iframecontainer">
                         <iframe class="responsive-iframe" src="https://livingatlas.arcgis.com/sea-ice/" width="1200" height="800"></iframe>
@@ -103,7 +105,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Ice News  {{ time }}</h2>
-                    <h3 class="section-subheading text-muted">Source: <a href="http://nsidc.org/arcticseaicenews/">http://nsidc.org/arcticseaicenews/</a><br/>Click the content to read more</h3>
+                    <h3 class="section-subheading text-muted">Source: <a href="http://nsidc.org/arcticseaicenews/">http://nsidc.org/arcticseaicenews/</a></h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -180,7 +182,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="static/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid" src="static/img/portfolio/1a.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Data Exploration and Gathering</div>
@@ -277,29 +279,29 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="static/img/team/1.JPG" alt="..." />
+                            <img class="mx-auto rounded-circle" src="static/img/team/1.PNG" alt="..." />
                             <h4>Amber</h4>
-                            <p class="text-muted">Lead Designer</p>
+                            <p class="text-muted"></p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-github"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:"><i class="fab fa fa-envelope"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="static/img/team/1.JPG" alt="..." />
-                            <h4>Aryam</h4>
-                            <p class="text-muted">Lead Designer</p>
+                            <img class="mx-auto rounded-circle" src="static/img/team/2.PNG" alt="..." />
+                            <h4>Aryam Tewolde</h4>
+                            <p class="text-muted"></p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-github"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:aryamtewolde@gmail.com"><i class="fab fa fa-envelope"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="static/img/team/3.JPG" alt="..." />
                             <h4>Yu-Hsuan Leo Lin</h4>
-                            <p class="text-muted">Lead Marketer</p>
+                            <p class="text-muted"></p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/yu-hsuan-lin-9bab13107/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://github.com/seafishleo"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="mailto:yhleolin@gmail.com"><i class="fab fa fa-envelope"></i></a>
@@ -307,12 +309,12 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="static/img/team/1.JPG" alt="..." />
+                            <img class="mx-auto rounded-circle" src="static/img/team/4.png" alt="..." />
                             <h4>Leslie</h4>
-                            <p class="text-muted">Lead Developer</p>
+                            <p class="text-muted"></p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-github"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa fa-envelope"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://github.com/"><i class="fab fa-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="mailto:"><i class="fab fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
@@ -444,7 +446,7 @@
                                         •	<a href="https://livingatlas.arcgis.com/sea-ice/">Visualize Arctic and Antarctic Sea Ice</a>
                                         </p>
                                         <p>We extracted the following information:
-                                            <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1.jpg" alt="..." />
+                                            <img class="img-fluid d-block mx-auto" src="static/img/portfolio/1a.jpg" alt="..." />
                                         </p>
                                         <p>The trends of these features were assessed:
                                             <img class="img-fluid d-block mx-auto" src="static/img/portfolio/9.png" alt="..." />
